src/test/deca/context/valid/classes/class_one_field_float.deca
// Description :
//    Classe contenant un seul champ de type float.
//
// Resultats :
//    OK

class A {
    float y;
}

{
}

