src/test/deca/context/invalid/classes/field_decl_void.deca
// Description :
//    Déclaration d'un champ de type void.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    void x;
}

{
}

